[tool.poetry]
name = "this-py"
version = "0.1.0"
description = "Determine what the user means when they ask 'what is this?'"
authors = ["chrisbodhi <chrisbodhi@gmail.com>"]
readme = "README.md"
packages = [{include = "this_py"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
opencv-python = "^4.7.0.72"
pyautogui = "^0.9.53"
pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
